# rope-cli

./: .gitignore  README.md  pyproject.toml
src/rope_cli/: cli.py  refactor.py
