[tool.poetry]
name = "rope-cli"
version = "0.1.0"
description = "A CLI tool for using the rope refactoring library"
authors = ["Matthew Moore"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rope = "^1.13.0"
click = "^8.1.7"

[tool.poetry.scripts]
rope-cli = "rope_cli.cli:cli"

[tool.rope]
save_objectdb = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
